# mlb-server

./: .clang-format  .clang-tidy  .gitmodules  .nvimrc  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt
cmake/: Sanitize.cmake  clang-tidy.cmake
docker/: Dockerfile
dummydata/articles/: 15379380.json  15379381.json  15379383.json  15379384.json
src/: CMakeLists.txt  articles.cpp  database.cpp  database.hpp  database_types.hpp  databaseimpl.cpp  databaseimpl.hpp  databaseimpldummy.cpp  databaseimpldummy.hpp  log.h  logger.cpp  main.cpp  reflections.hpp  responseconverter.cpp  responseconverter.hpp  server.cpp  server.hpp  serverimpl.hpp  traits.hpp  tuple_foreach.hpp  version.hpp.cmake
src/restparsers/: articles.cpp  gamereports.cpp  parsers.cpp  parsers.hpp  schedule.cpp
tests/: CMakeLists.txt  database_mock.hpp  databasedummytests.cpp  jsonconvertertests.cpp  multiplerequeststests.cpp  server-tests.cpp  servertests.cpp
travis/: build.sh
